# pybind11-project-example

./: .gitmodules  CMakeLists.txt  README.rst  setup.py
cpp_library_bindings/: cpp_library.cpp
cpp_library_bindings/_core/: cpp_library.cpp
include/cpp_library/: Foo.h  NestedClasses.h
include/cpp_library/sublibA/: add.h
src/: Foo.cpp
